# ubiquotous

./: README.md  index.html
besa/: CMakeLists.txt  README.md  activethree_reader  activethree_reader.cpp  activethree_stream  activethree_stream.cpp  main.cpp  muse_eeg_dashboard.html  panel.html  panel_server.py
besa/sim1/: activethree_sim  activethree_simulator.cpp
besa/sim2/: activethree_reader  activethree_reader.cpp  activethree_stream  activethree_stream.cpp
extra/eye track reels/: eyetracker.html
extra/novo/: app.js  index.html  styles.css
extra/novo2/: CMakeLists.txt  main.cpp
extra/oo/: app.js  index.html  styles.css
extra/opa/: blink.html  eye.html
hand-tracker/: .firebaserc
hand-tracker/public/: about.html  decisionmaker.html  download.html  emotions.html  index.html
hand-tracker/public/components/: footer.html  navbar.html
hand-tracker/public/hand/: index.html
hand-tracker/public/hand/css/: styles.css
hand-tracker/public/hand/js/: blink-detection.js  config.js  eeg-visualization.js  game-logic.js  hand-tracking.js  main.js  muse-connection.js  signal-processing.js  ui-controls.js
hand-tracker/public/menu/information/basics/: 01.html  learn.html
hand-tracker/public/menu/updates/industry/: news.html
hand-tracker/public/menu/updates/research/: documentation.html
sphere/: index.html  sph.html  styles.css
sphere/scripts/: config.js  connection.js  filters.js  functions.js  ui.js  visualization.js
